did a bunch of markov chain stuff

--- a/spectral/Markov Chains.ipynb
+++ b/spectral/Markov Chains.ipynb
@@ -386,14 +386,106 @@
    "source": [
     "Okay, weird and awkward. I guess I still have a lot to learn (obviously we need to transpose... )\n",
     "\n",
-    "I think I'll obvioulsy have to come back to that, but in the meantime:"
+    "I think I'll obvioulsy have to come back to that, but in the meantime...\n",
+    "\n",
+    "actually pretty straightforward, we are actually looking at $\\mathbf{x} P = \\mathbf{x}$, which is fairly easy to verify. Thus, we simply transpose this equation, to get what we wanted."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next question is, can we efficiently find the eigenvector that has eigenvalue 1?"
+    "The next question is, can we efficiently find the eigenvector that has eigenvalue 1?\n",
+    "\n",
+    "We can try and do it with the power method, but in fact, using the row echelon form, or whatever it is called will probably get the job done even faster:\n",
+    "\n",
+    "because we know the eigenvalue is 1, we only need to solve:\n",
+    "\n",
+    "$$P^T \\mathbf{y} = \\mathbf{y} ~~~ \\rightarrow ~~~ (P^T - \\mathbf{I}) \\mathbf{y} = \\mathbf{0}$$\n",
+    "\n",
+    "This is an equation we should be able to solve with gaussian elimination, very efficiently:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def row_echelon(L):\n",
+    "    n = L.shape[0]\n",
+    "    b = array([[float(L[i][j]) for j in range(L.shape[1])] for i in range(n)])\n",
+    "    b = around(b,6)  #cutting off at 6 decimal places\n",
+    "    for i in reversed(range(b.shape[0])):\n",
+    "        if(b[i][i] == 0):\n",
+    "            #print(\"woh, zero\")\n",
+    "            continue\n",
+    "        b[i] = b[i]/b[i][i]\n",
+    "        if(i != 0):\n",
+    "            for j in range(i):\n",
+    "                b[j] = b[j] - b[i]*b[j][i]/b[i][i]       \n",
+    "    return b\n",
+    "\n",
+    "def gaussian_elim(L):\n",
+    "    n = L.shape[0]\n",
+    "    b = array([[float(L[i][j]) for j in range(L.shape[1])] for i in range(n)]) \n",
+    "    for i in range(n):\n",
+    "        if(b[i][i] == 0):\n",
+    "            for k in range(i+1,n):\n",
+    "                if(b[i][k] != 0):\n",
+    "                    raise ValueError(\"Yikes!!! Have to do a swap\")\n",
+    "            continue        \n",
+    "        for j in range(i+1,n):\n",
+    "            b[j] = b[j] - b[i]*b[j][i]/b[i][i]  \n",
+    "    return around(b,6) #cutting off at 6 decimal places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        , -0.        , -2.61538462],\n",
+       "       [-0.        ,  1.        , -1.07692308],\n",
+       "       [ 0.        ,  0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = gaussian_elim(M.T - eye(3))\n",
+    "ans = row_echelon(temp)\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now, still taking from http://www.econ.brown.edu/students/takeshi_suzuki/math_camp_2011/la3-2011.pdf\n",
+    "\n",
+    "$$q_1 = 2.615 q_3$$\n",
+    "\n",
+    "$$q_2 = 1.077 q_3$$\n",
+    "\n",
+    "$$q_3 = q_3$$\n",
+    "\n",
+    "Therefore, $\\mathbf{q} = (2.615, 1.077, 1) q_3$ , where $q_3$ can be whatever we want. This will yield, with correct choice of $q_3$ we have \n",
+    "\n",
+    "$$\\mathbf{q} = (34/61,  14/61,  13/61)$$\n",
+    "\n",
+    "We can also try a method based on the power method\n",
+    "\n"
    ]
   },
   {
