done for the day

--- a/mStat1/Homework 5.ipynb
+++ b/mStat1/Homework 5.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#Homework #5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>6.)</b> Suppose that X ∼ bin(n, p).\n",
     "\n",
     "<b>b.</b> Show that mle $\\hat{p}= X/n$ attains the Cram ́er-Rao lower bound.\n",
@@ -114,7 +121,7 @@
     "\n",
     "We write the joint probability function\n",
     "\n",
-    "$$f(x_1, ..., x_n | \\theta) = (1- \\theta)^{\\sum x_i -n) \\theta^n$$\n",
+    "$$f(x_1, ..., x_n | \\theta) = \\theta^n(1- \\theta)^{\\sum x_i -n} $$\n",
     "\n",
     "by the factorization theorem $\\sum X_i$ is sufficient for $\\theta$"
    ]
