--- a/mStat1/Homework 5.ipynb
+++ b/mStat1/Homework 5.ipynb
@@ -19,7 +19,19 @@
     "\n",
     "$$\\frac 1 {nI(θ)}$$\n",
     "\n",
-    "here, $I(θ) = \\partial^2_θ \\text{lik} (θ)$"
+    "here,\n",
+    "\n",
+    "$$I(θ) = -\\mathbb{E}[\\partial^2_θ  l(θ)] = -\\mathbb{E}[\\partial^2_θ ( x \\ln θ +(n-x) \\ln  (1 - θ) + \\text{const.})] = \\mathbb{E}[\\frac x {\\theta^2} + \\frac {n-x}{(1-\\theta)^2}] = \\frac n {\\theta (1 - \\theta)} $$\n",
+    "\n",
+    "So, the lower-bound is achieved by\n",
+    "\n",
+    "$$\\frac  {\\theta (1 - \\theta)} {n^2}$$\n",
+    "\n",
+    "Now, we check the variance of $\\hat{p}$\n",
+    "\n",
+    "$$\\text{var}(\\hat{p}) = \\text{var}(X/n)= \\frac  {p (1 - p)} {n^2}$$\n",
+    "\n",
+    "and therefore the mle has achieved the lower-bound"
    ]
   },
   {
@@ -102,15 +114,21 @@
    "source": [
     "<b>53.</b> Let $X_1 , . . . , X_n$ be i.i.d. uniform on [0, θ ].\n",
     "\n",
-    "a. Find the method of moments estimate of θ and its mean and variance.\n",
+    "<b>a.</b> Find the method of moments estimate of θ and its mean and variance.\n",
     "\n",
-    "b. Find the mle of θ.\n",
+    "$$\\mu = \\bar{X} = θ/2 ~~~~ \\rightarrow ~~~ \\hat{θ} = 2 \\bar{X}$$\n",
     "\n",
-    "c. Find the probability density of the mle, and calculate its mean and variance.\n",
+    "<b>b.</b> Find the mle of θ.\n",
+    "\n",
+    "$$l(θ) = -n \\ln (θ)$$\n",
+    "\n",
+    "We need to maximize this quantity, subject to the restriction that all X are less than θ. Therefore the maximum of the X will be the mle.\n",
+    "\n",
+    "<b>c.</b> Find the probability density of the mle, and calculate its mean and variance.\n",
     "Compare the variance, the bias, and the mean squared error to those of the\n",
     "method of moments estimate.\n",
     "\n",
-    "d. Find a modification of the mle that renders it unbiased."
+    "<b>d.</b> Find a modification of the mle that renders it unbiased."
    ]
   },
   {
