--- a/spectral/Markov Chains.ipynb
+++ b/spectral/Markov Chains.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
        "       [-1330,  1394]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +245,7 @@
        "array([ 27.,  72.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -305,10 +305,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 34.3857,  13.8958,  12.7246])"
+       "array([ 34.9286,  13.4017,  12.6758])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +345,7 @@
        "        [ 0.33333333, -0.38529801,  0.6646122 ]]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +369,7 @@
        "array([ 34.,  14.,  13.])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -457,7 +457,7 @@
        "       [ 0.        ,  0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
     "\n",
     "$$\\mathbf{q} = (34/61,  14/61,  13/61)$$\n",
     "\n",
-    "We can also try a method based on the power method\n",
+    "We can also try a method based on the power method, but I think it is guaranteed to be slower\n",
     "\n"
    ]
   },
