got diffusion working with dirichlet;

--- a/spectral/Diffusion, etc..ipynb
+++ b/spectral/Diffusion, etc..ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -221,10 +221,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0, 30,  0,  8, 21,  0, 16,  0,  0, 23,  0,  5, 12,  0,  5,  0])"
+       "array([ 0, 25,  0, 14, 25,  0, 15,  0,  0, 19,  0,  8,  9,  0,  5,  0])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -263,11 +263,11 @@
     {
      "data": {
       "text/plain": [
-       "array([  5.05,   7.55,   7.25,   5.2 ,   6.65,  10.3 ,   9.45,   7.4 ,\n",
-       "         7.9 ,  10.85,   9.8 ,   6.7 ,   5.45,   7.35,   8.15,   4.95])"
+       "array([  5.7 ,   8.9 ,   6.4 ,   4.9 ,   7.05,   9.45,   8.25,   7.6 ,\n",
+       "         7.7 ,  10.15,  10.35,   7.85,   4.75,   7.35,   8.15,   5.45])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -298,8 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  5.4   7.7   6.8   5.1   6.1  10.1   9.5   5.8   7.3   8.8   9.1   8.1\n",
-      "   4.6   7.2   6.1   4.3]\n"
+      "[  5.1   7.5   7.3   4.2   7.3   8.    8.2   8.4   6.9   9.6  10.4   7.6\n",
+      "   5.    5.6   6.6   4.3]\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
        "        2.85,  5.05,  2.8 , -6.45,  1.95, -0.7 , -6.55])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +383,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
        "          0,    0,    0,    0,    0])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -455,15 +455,15 @@
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 0, 0, 1, 1],\n",
-       " [1, 0, 1, 1, 0, 0],\n",
-       " [0, 1, 0, 0, 1, 1],\n",
-       " [0, 1, 0, 0, 1, 1],\n",
-       " [1, 0, 1, 1, 0, 0],\n",
-       " [1, 0, 1, 1, 0, 0]]"
+       "[[0, 0, 0, 1, 1, 1],\n",
+       " [0, 0, 0, 1, 1, 1],\n",
+       " [0, 0, 0, 1, 1, 1],\n",
+       " [1, 1, 1, 0, 0, 0],\n",
+       " [1, 1, 1, 0, 0, 0],\n",
+       " [1, 1, 1, 0, 0, 0]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +565,7 @@
        "        -2.26133913e-17 +0.00000000e+00j,  -1.76416482e-16 +0.00000000e+00j])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -589,7 +589,7 @@
        "         5.00000000e+00,   3.49305808e+00,   4.00000000e+00])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -622,7 +622,7 @@
        "       -0.33333333, -0.33333333, -0.33333333, -0.33333333])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -662,7 +662,7 @@
        "         4.00000000e+00])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -714,7 +714,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAEACAYAAACeQuziAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEwxJREFUeJzt3V1sXGl9x/GvjbMk8aRe8yJhSiAIBGpHiBetkMVL1+1S\n5FiU9oKVHCEV0Tq9KMtSVaVlb2pzhUpVQbNWLwpdtLwtiGVBIEiqImEBRd0usIHdBKokC46hAVxg\nlzgktctOL85YOZkde87EZ/z8H/h+pCOPn5md+ek8c34+OWdmD0iSJEmSJEmSJEmSJEmSpB24AzgF\nPAR8FHhy2jiSJIBDwCNcLeWPA29KlkaSfo2M9Lj/58AGsB/4ZfvnDwYdSpJUzZ8BF4EfAx9KnEWS\n1PY84DTwVIq97U8Bb0yaSJJ+TfQ6xHET8FXgJ+3f7wNeAXyk9JizFEUuSaruHPD8nTzBi4GHgX3A\nEHA38JaOx7R28gK7aCF1gIoWUgeoaCF1gIoWUgeoaCF1gIoWUgeoYCF1gIp6dudwj/u/CXwQ+Brw\nrfbYP+8wlCSpgl6HOADe3V4kSbuo1x70r5Kl1AEqWkodoKKl1AEqWkodoKKl1AEqWkodoIKl1AEi\nyeUYtCRFsuNj0JKkRCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpak\noCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoKoU9AuBB0vLY8DtgwwlSerfMHABOFga85JXktS/\n2rvztcBXBv0idWpOTMxPT06uvuGWWx6dnpxcbU5MzKfO1M04zI/B6o3w6BisjoM5d8Cc9cohZy7b\neknt3XkX8OeDfpG6NCcm5udmZ9dbJXOzs+vRJm4c5huwTrEuW0CrAevRNgJz1suc9cllW+9Qa3fe\nAKwCTx/ki9RpenJytdXF9OTkaupsZWPFem11Lu3xMMxZL3PWJ5dtvUPP7hzp48kOA1+n+6QslG4v\ntZfkGqOje/oZT2UIuubZajwVc9bLnPXJZFufai+V9VPQR4B7trhvoZ8X3S1rly5t9DOeSgu65tlq\nPBVz1suc9clkW1/i2p3Xnodfqn4OehR4DXBf35ESWlleXjx65Mg1EzQ3O7uxsry8mCpTN8Ow2Oh4\ns4/CxjCY8zqYs1455MxlW08h7DFoyOfMbg5nycGcdTNnfXLZ1kt2pTtDF7QkBdWzO/2qtyQFZUFL\nUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAW\ntCQFZUFLUlAWtCQFZUFLUlBVCvpG4F7g28BpYHKgiSRJAIxUeMw/Ap8H3tB+/OhAE9VsHOYfh9uG\nYE+rfSXin8E7U+fq1ISZg3D7Adh7Ea6swLFTxXoPxZz1Mmd9ctnW6zQGPNLjMWEvGjsO8w1Yp8jY\nAloNWI92ReImzMzBmRa0Npc5ONOEmdTZysxZL3PWJ5dtvcOOu/MlwP3AB4BvAO8D9tf9IoMyBquU\nJmxzaY+HMQ0nym/+zeUwHE+drcyc9TJnfXLZ1jv07M5ehzhGgJcBtwEPAO8F3gH8bcfjFkq3l9pL\nckOwp5/xVA7A3m7jDdi321m2Y856mbM+mWzrU+2lsl4F/f328kD793spCrrTQj8vultasNHPeCoX\n4Uq38TW4vNtZtmPOepmzPpls60tcu/Pa8/BLr09x/BBYAV7Q/v01wKnrCJbEMCw2OiZotH3yIFWm\nblbg2FE4Wx6bg3Pn4c5UmboxZ73MWZ9ctvV+DVV4zIuB9wM3AOeANwOPle5vVXyeJHI5s9uEmWfD\nWxuwbw0un4c7o50lB3PWzZz1yWVbL9mV7gx7klCSAuvZnX6TUJKCsqAlKSgLWpKCsqAlKSgLWpKC\nsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAl\nKSgLWpKCGqn4uO8BPwd+SXHl3JcPKpAkqT/fBZ6yxX2hLxo7DvNjsHojPDoGq+MwnzpTN02YmYYT\nt8LSNJxowkzqTN3kkjOXec8lZw7znsu6LKmtO78LPHXQL1K3cZhvwDpFxhbQasB6tIlrwswcnGlB\na3OZgzPRNoJccuYy77nkzGHec1mXHWrrzkeAB4GvAUcH9SJ1G4NVShO2ubTHw5iGE+U3/+ZyGI6n\nzlaWS85c5j2XnDnMey7rskPP7qx6DPqVwAXg6cC/Ad8Bvly6f6F0e6m9JDcEe/oZT+UA7O023oB9\nu51lO7nkzGXec8mZw7xnsi6n2ktlVQv6QvvnKvApipOEWxV0GK3ihGbl8VQuwpVu42twebezbCeX\nnLnMey45c5j3TNblEtfuvPY8/FLlY3b7gQPt26PAa4GH+gyWxDAsNjomaBQ2hmExVaZuVuDYUThb\nHpuDc+fhzlSZusklZy7znkvOHOY9l3U5CM8FTraXh4E7Ou4Pewwa8jmz24SZw3D8Vlg6DMcjnYAp\nyyVnLvOeS84c5j2XdVmyK90ZuqAlKaie3ek3CSUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUp\nKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpqKoF\n/STgQeCzA8wiSSqpWtBvA06T4QVic7nSbxNmpuHErbA0DSciXjUZ8smZy7znkjOHec9lXdbtWcAX\ngN+l+x502NIeh/kGrFNkbAGtBqxHm7gmzMzBmRa0Npc5OBNtI8glZy7znkvOHOY9l3XZoZbu/ATw\nUuBmMivoMVilNGGbS3s8jGk4UX7zby6H4XjqbGW55Mxl3nPJmcO857IuO/TszpEe978O+DHF8eep\nbR63ULq91F6SG4I9/YyncgD2dhtvwL7dzrKdXHLmMu+55Mxh3jNZl1Ns36NP0KugXwG8nuKfMnuB\n3wA+CPxxx+MW+nnR3dKCjX7GU7kIV7qNr8Hl3c6ynVxy5jLvueTMYd4zWZdLXLvzWuvhl+wOcXQ7\nLjUa8LhUt2N8fwpnIx3jg3xy5jLvueTMYd5zWZcdau3Om4HPDPpF6pbLmd0mzByG47fC0mE4HunN\nX5ZLzlzmPZecOcx7LuuyZFe6M3RBS1JQPbvTbxJKUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFL\nUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlBV\nCnovcD9wEjgNvGugiSRJAAxVfNx+4BfACPAV4K/aP6G48GHV59l1zYmJ+YPPec5tjdHRPWuXLm2s\nLC8vnrpw4Z2pc3Uah/nH4bYh2NOCjWFY/BmEy9mEmYNw+wHYexGurMCxU/D51Lk6mbNeOeTMZRsq\nqb079wMPAL/d8SIhNScm5udmZ9dbJXOzs+vNiYlQl2Mfh/kGrFOsyxbQasB6tMvGN2FmDs60oLW5\nzMGZJsykzlZmznrlkDOXbahDbd05THGI4yLw7kG9SN2mJydXW11MT06ups5WNgarlN5Ym0t7PIxp\nOFHeSDeXw3A8dbYyc9Yrh5y5bEMdenbnSMUnehx4CTAG/CswBSyV7l8o3V7quC+Zxujonn7GUxmC\nrnm2Gk/lQHE+4gkasG+3s2zHnPXKIWcm29BUe6msakFvegz4HHATWxd0GGuXLm30M55KC7rm2Wo8\nlYtwpdv4Glze7SzbMWe9csiZyTa0xLW92fPwS5VPcTwNuLF9ex/w+8CDfQZLYmV5efHokSPXTNDc\n7OzGyvLyYqpM3QzDYqPjjTTaPsmRKlM3K3DsKJwtj83BufNwZ6pM3ZizXjnkzGUb6leVM4gvAu6m\nKPNh4EPA35fu91McNcjlDHQTZp4Nb23AvjW4fB7ujHY2H8xZtxxy5rINlexKd4Y9SShJgfXsTr9J\nKElBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlB\nWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBVSnog8AXgVPAw8DtA00kSQKqXVH2Ge3lJNAAvg78\nEfDt9v1e1bsGueTM5crJTZg5CLcfgL0X4coKHIt2FWrIJ2cO857LNlQykO78NHBLx4uE1JyYmJ+b\nnV1vlczNzq43JybmU2cryyXnOMw3YJ1izltAqwHr4xAqZxNm5uBMC1qbyxycacJM6mxlueTMYd5z\n2YY61N6dh4Blij3pgb1IXaYnJ1dbXUxPTq6mzlaWS84xWKW0kW4u7fEwpuFEufQ2l8NwPHW2slxy\n5jDvuWxDHXp250gfT9YA7gXeBqx13LdQur3UXpJrjI7u6Wc8lVxyDkHXPFuNp3IA9nYbb8C+3c6y\nnVxy5jDvmWxDU+2lsqoFvQf4JPBhikMcnRb6edHdsnbp0kY/46nkkrMFXfNsNZ7KRbjSbXwNLu92\nlu3kkjOHec9kG1ri2p3XnodfqnyKYwj4F+A08N7rSZXKyvLy4tEjR66ZoLnZ2Y2V5eXFVJm6ySXn\nMCw2OjbK0fYJo1SZulmBY0fhbHlsDs6dhztTZeoml5w5zHsu21C/qpxBfBXwJeBbXD1mcgdwon3b\nT3HUIJecOZzNh+IE3LPhrQ3YtwaXz8OdET8dkUvOHOY9l22oZFe6M+xJQkkKrGd3+k1CSQrKgpak\noCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxo\nSQrKgpakoCxoSQrKgpakoKoU9F3Aj4CHBpxFktSnVwMvZeuC9pqEktS/nt05UuFJvgwc2nGURHK5\n0q8565XDVaghn5w5zHsOGQflEBnuQTcnJubnZmfXWyVzs7PrzYmJ+dTZysxZr3GYb8A6xXuzBbQa\nsD4O5rwOOcx7Dhm7qK07D5FhQU9PTq62upienFxNna3MnPUag1VKpbe5tMfDyCVnDvOeQ8YuajnE\nUcVC6fZSe0muMTq6p5/xVMxZryHommer8VRyyZnDvOeQEZhqL5UNoqDDWLt0aaOf8VTMWa8WdM2z\n1XgqueTMYd5zyMgTd157Hn6p8jG7e4CvAi8AVoA3X0ewJFaWlxePHjlyzQTNzc5urCwvL6bK1I05\n6zUMi42Okhttn4BLlambXHLmMO85ZLweQzU8R6um5xmIXM7smrNeuXw6IpecOcx7Dhk77Ep3hj1J\nKEmB9exOv+otSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ\n0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUVJWCnga+A5wB/mawcSRJVT0JOAscAvYAJ4Hf\n6nhMLtcknEodoKKp1AEqmkodoKKp1AEqmkodoKKp1AEqmEodoKIdX5Pw5RQF/T2Ky8N/DPjDHcdK\nYyp1gIqmUgeoaCp1gIqmUgeoaCp1gIqmUgeoYCp1gLr0KujfBFZKv3+/PSZJGrBeBZ3L4QtJ+pUz\n1OP+SWCB4kQhwB3A48DflR5zFnhe7ckk6VfbOeD5O3mCkfaTHAJuoPtJQklSIoeB/6LYU74jcRZJ\nkiQpbzl8ieUu4EfAQ6mD9HAQ+CJwCngYuD1tnC3tBe6nONx1GnhX2jjbehLwIPDZ1EG28T3gWxQ5\n/zNtlG3dCNwLfJti3ifTxunqhRTrcXN5jLjb0R0U2/pDwEeBJ9f9AlW+xBLBq4GXEr+gnwG8pH27\nQXFYKeL6BNjf/jkC/AfwqoRZtvOXwEeAz6QOso3vAk9JHaKCu4E/ad8eAcYSZqliGLhAseMTzSHg\nEa6W8seBN3V74E7+Xxy5fInly8DPUoeo4IcUf+QA1ij2VJ6ZLs62ftH+eQPFH+qfJsyylWcBM8D7\n6f1ppdSi5xuj2NG5q/37/1HsnUb2GooPOKz0emACP6fozP0Uf+z2Az/o9sCdFLRfYhmcQxR7/fcn\nzrGVYYo/Jj+iOCxzOm2crt4DvJ3iY6GRtYAvAF8DjibOspXnAqvAB4BvAO/j6r+iopqlOHQQ0U+B\nfwDOA/8NPErxHniCnRS0X2IZjAbFsb63UexJR/Q4xeGYZwG/Q7yv1r4O+DHFccjoe6evpPhjfBh4\nC8WeajQjwMuAf2r/vAS8I2mi7d0A/AHwidRBtvA84C8odsSeSbHNv7HbA3dS0D/g2uM7Byn2onX9\n9gCfBD4MfDpxlioeAz4H3JQ6SIdXAK+nOL57D/B7wAeTJtrahfbPVeBTFIcOo/l+e3mg/fu9FEUd\n1WHg6xTrNKKbgK8CP6E4XHQfxXu2Vjl9ieUQ8U8SDlGUyHtSB+nhaRRn9AH2AV8CbkkXp6ebifsp\njv3AgfbtUeDfgdemi7OtLwEvaN9e4NpvE0fzMbY46RbEiyk+qbWPYru/m+JfT7XL4Uss91Ac5/lf\nimPmb04bZ0uvojh0cJKrHxOa3va/SONFFMchT1J8POztaeP0dDNxP8XxXIr1eJJig426DUFRKg8A\n36TY44v6KY5R4H+4+ocvqr/m6sfs7qb417MkSZIkSZIkSZIkSZIkSZIkSZI0GP8PDdV8/AXHHaYA\nAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xb057eacc>"
+       "<matplotlib.figure.Figure at 0xb0554d4c>"
       ]
      },
      "metadata": {},
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -808,7 +808,7 @@
        "        [ 0.        ,  0.        ,  0.        ,  0.80178373]]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,12 +835,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hmmm... not really seeing the answer that I'm looking for here. I'm not sure how to incorporate the boundary conditions into the Laplacian."
+    "hmmm... not really seeing the answer that I'm looking for here. I'm not sure how to incorporate the boundary conditions into the Laplacian. Totally found it now, thanks to Ehsan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -849,65 +849,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.   0.   0.   0.   0.   0.   0.   0. ]\n",
+      "[[ 0.   0.   0.   0.   0.   0.   0.   0. ]\n",
       " [-0.5  1.  -0.5  0.   0.   0.   0.   0. ]\n",
       " [ 0.  -0.5  1.  -0.5  0.   0.   0.   0. ]\n",
       " [ 0.   0.  -0.5  1.  -0.5  0.   0.   0. ]\n",
       " [ 0.   0.   0.  -0.5  1.  -0.5  0.   0. ]\n",
       " [ 0.   0.   0.   0.  -0.5  1.  -0.5  0. ]\n",
       " [ 0.   0.   0.   0.   0.  -0.5  1.  -0.5]\n",
-      " [ 0.   0.   0.   0.   0.   0.   0.   1. ]]\n",
-      "[5, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[ 5.   -1.25  0.    0.    0.    0.    0.    0.  ]\n",
-      "[ 5.     -2.5     0.3125  0.      0.      0.      0.      0.    ]\n",
-      "[ 5.       -3.828125  0.9375   -0.078125  0.        0.        0.        0.      ]\n",
-      "[ 5.         -5.3125      1.9140625  -0.3125      0.01953125  0.          0.\n",
-      "  0.        ]\n",
-      "[  5.00000000e+00  -7.04101562e+00   3.32031250e+00  -7.95898438e-01\n",
-      "   9.76562500e-02  -4.88281250e-03   0.00000000e+00   0.00000000e+00]\n",
-      "[  5.00000000e+00  -9.12109375e+00   5.27954102e+00  -1.65039062e+00\n",
-      "   2.97851562e-01  -2.92968750e-02   1.22070312e-03   0.00000000e+00]\n",
-      "[  5.00000000e+00  -1.16909790e+01   7.97241211e+00  -3.04473877e+00\n",
-      "   7.17773438e-01  -1.04064941e-01   8.54492188e-03   0.00000000e+00]\n",
-      "[  5.         -14.93408203  11.65634155  -5.21728516   1.50497437\n",
-      "  -0.28564453   0.03456116   0.        ]\n",
-      "[  5.         -19.09816742  16.69418335  -8.50761414   2.88070679\n",
-      "  -0.67052841   0.10597229   0.        ]\n"
+      " [ 0.   0.   0.   0.   0.   0.   0.   0. ]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([  5.        , -24.52171326,  23.59562874, -13.40133667,\n",
-       "         5.17524242,  -1.41719818,   0.27360439,   0.        ])"
+       "array([ 5.        ,  4.28567203,  3.57135997,  2.85704791,  2.1427716 ,\n",
+       "        1.42849529,  0.71424764,  0.        ])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n = 8\n",
-    "A = make_string_graph(n) \n",
-    "L = (diag(sum(A, axis = 1)) - A)/2\n",
-    "L[0][0] = 1\n",
-    "L[n-1][n-1] = 1\n",
+    "A = make_string_graph(n)/2\n",
+    "A[0][0] = 1\n",
+    "A[n-1][n-1] = 1\n",
+    "L = (diag(sum(A, axis = 1)) - A)\n",
+    "#L[0][0] = 1\n",
+    "#L[n-1][n-1] = 1\n",
     "print(L)\n",
-    "L_inv = inv(L)\n",
+    "#L_inv = inv(L)\n",
     "def diffuse(state, steps):\n",
     "    for s in range(steps):\n",
-    "        print(state)\n",
+    "        #print(around(state,4))\n",
     "        a = state[0]\n",
     "        b = state[n-1]\n",
-    "        new_state = (dot(L, state) +state)/2 \n",
+    "        new_state = dot(A, state) \n",
     "        new_state[0] = a\n",
     "        new_state[n-1] = b\n",
     "        state = new_state         \n",
     "        \n",
     "    return array(state)    \n",
     "\n",
-    "diffuse([5,0,0,0,0,0,0,0], 10)"
+    "diffuse([5,0,0,0,0,0,0,0], 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.        ,  4.28571429,  3.57142857,  2.85714286,  2.14285714,\n",
+       "        1.42857143,  0.71428571,  0.        ])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eig(L)[1][:,6]*(5/eig(L)[1][:,6][0])"
    ]
   },
   {
